Fix the overflowing content issue by adding box-sizing @CardList.css

--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -1,12 +1,14 @@
 .card-list {
     display: flex;
     flex-direction: column;
-    /* align-items: flex-start; */
 	justify-content: flex-start;
+    box-sizing: border-box;
+    width: 100%;
+    border: 10px;
+    padding: 5px;
     /* Other Styles */
 	font-family: "Inter", sans-serif;
 	line-height: 1.5;
-	/* min-height: 100vh; */
 	background-color: #19a9ec;
 }
 
